--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "datatables.net-bs4": "^1.13.8",
     "datatables.net-dt": "^1.13.8",
     "datatables.net-vue3": "^2.1.3",
-    "jl-datatable": "^1.1.1",
     "jquery": "^3.7.1",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
+    "vue-awesome-paginate": "^1.1.46",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
