--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
     "vue-awesome-paginate": "^1.1.46",
+    "vue-cookies": "^1.8.3",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
