--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue": "^3.3.11",
     "vue-awesome-paginate": "^1.1.46",
     "vue-cookies": "^1.8.3",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
