--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^3.3.11",
     "vue-awesome-paginate": "^1.1.46",
     "vue-cookies": "^1.8.3",
+    "vue-multiselect": "^2.1.9",
     "vue-router": "^4.0.13",
     "xlsx": "^0.18.5"
   },
